src/test/ui/type-alias-impl-trait/type_of_a_let.stderr
error[E0308]: mismatched types
  --> $DIR/type_of_a_let.rs:12:18
   |
LL | type Foo = impl Debug;
   |            ---------- the expected opaque type
...
LL |     let x: Foo = 22_u32;
   |            ---   ^^^^^^ expected opaque type, found `u32`
   |            |
   |            expected due to this
   |
   = note: expected opaque type `impl Debug`
                     found type `u32`

error[E0308]: mismatched types
  --> $DIR/type_of_a_let.rs:14:5
   |
LL | type Foo = impl Debug;
   |            ---------- the found opaque type
...
LL | fn foo1() -> u32 {
   |              --- expected `u32` because of return type
...
LL |     x
   |     ^ expected `u32`, found opaque type
   |
   = note:     expected type `u32`
           found opaque type `impl Debug`

error[E0308]: mismatched types
  --> $DIR/type_of_a_let.rs:19:18
   |
LL | type Foo = impl Debug;
   |            ---------- the expected opaque type
...
LL |     let x: Foo = 22_u32;
   |            ---   ^^^^^^ expected opaque type, found `u32`
   |            |
   |            expected due to this
   |
   = note: expected opaque type `impl Debug`
                     found type `u32`

error[E0308]: mismatched types
  --> $DIR/type_of_a_let.rs:23:5
   |
LL | type Foo = impl Debug;
   |            ---------- the found opaque type
...
LL | fn foo2() -> u32 {
   |              --- expected `u32` because of return type
...
LL |     y
   |     ^ expected `u32`, found opaque type
   |
   = note:     expected type `u32`
           found opaque type `impl Debug`

error: could not find defining uses
  --> $DIR/type_of_a_let.rs:8:12
   |
LL | type Foo = impl Debug;
   |            ^^^^^^^^^^

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
